fix over score overflow bug

--- a/scorecard/src/styles.css
+++ b/scorecard/src/styles.css
@@ -8,11 +8,9 @@
   flex-direction: column;
   width: 1000px;
   height: 380px;
-  /* border: 0.5px solid black; */
 }
 
 .bowler-name {
-  /* height: 60px; */
   width: 150px;
   display: flex;
   font-size: medium;
@@ -25,7 +23,6 @@
 }
 
 .bowler-details {
-  height: 60px;
   width: 1000px;
   display: flex;
 }
